--- a/usr/src/uts/intel/hv_kvp/Makefile
+++ b/usr/src/uts/intel/hv_kvp/Makefile
@@ -47,6 +47,7 @@ LDFLAGS += -N misc/hyperv -N drv/hv_vmbus
 CFLAGS += $(CCVERBOSE)
 
 CERRWARN += -_gcc10=-Wno-address-of-packed-member
+CERRWARN += -_gcc14=-Wno-address-of-packed-member
 
 #
 #	Default build targets.
